tests/compile-fail/integration__integration__pseudo__pseudo_after_arg.snap
---
source: tests/integration/pseudo.rs
expression: stderr
---
error: invalid pseudo-arg
   ┌─ <input>:29:18
   │
29 │         wait(12, @mask=0b1);
   │                  ^^^^^^ must come before other arguments


